--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.7'
 
 services:
-  relay:
-    image: "relay"
+  http-relay:
+    image: "http-relay"
     build:
       context: .
       dockerfile: ./Dockerfile
